# ToolbeltRS

./: Cargo.toml  README.md
crates/tool_registry/: Cargo.toml
crates/tool_registry/src/: context.rs  inventory_support.rs  lib.rs  macros.rs  plugin.rs  registry.rs  runtime.rs  tool.rs
crates/tool_registry/tests/: registry_tests.rs
crates/tool_registry_builtin/: Cargo.toml
crates/tool_registry_builtin/src/: fetch_url.rs  lib.rs  web_search.rs
crates/tool_registry_builtin/tests/: builtin_tests.rs
crates/tool_registry_macros/: Cargo.toml
crates/tool_registry_macros/src/: lib.rs
crates/tool_registry_macros/tests/: macro_tests.rs
examples/: plugin_tools.rs
examples_crate/: Cargo.toml
